Updated outdated tests. Removed 'identifier' as possible select column